AM_CPPFLAGS = -I$(srcdir)/../lib
bin_PROGRAMS = invaders
invaders_SOURCES = sdlenv.cpp sdlenv.h shot.cpp shot.h cannonshot.cpp cannonshot.h alienshot.cpp alienshot.h cannon.cpp cannon.h alien.cpp alien.h topalien.cpp topalien.h midalien.cpp midalien.h botalien.cpp botalien.h saucer.cpp saucer.h topbar.cpp topbar.h particle.cpp particle.h explosion.cpp explosion.h phalanx.cpp phalanx.h shelter.cpp shelter.h hiscore.cpp hiscore.h starfield.cpp starfield.h pointschart.cpp pointschart.h credits.cpp credits.h title.cpp title.h invaders.cpp
#include_HEADERS = sdlenv.h shot.h cannonshot.h alienshot.h cannon.h alien.h topalien.h midalien.h botalien.h saucer.h topbar.h particle.h explosion.h phalanx.h shelter.h hiscore.h starfield.h pointschart.h credits.h title.h invaders.h
invaders_LDADD = ../lib/libinvaders.la

